tests/rename/should_compile/LookupSubB.hs
module LookupSubB where

getEcho = undefined
