tests/rename/should_fail/T25877_aux.hs
module T25877_aux where
data A = A
